[project]
name = "agent-in-langgraph"
version = "0.1.0"
description = ""
authors = [{ name = "JeremyGu2021", email = "jgu@apra.com.au" }]
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = ["openai (>=1.97.0,<2.0.0)", "httpx (>=0.28.1,<0.29.0)", "dotenv (>=0.9.9,<0.10.0)", "langgraph (>=0.5.3,<0.6.0)", "numpy (<2.3.1)", "langchain-core (>=0.3.69,<0.4.0)", "langchain-openai (>=0.3.28,<0.4.0)", "langchain-community (>=0.3.27,<0.4.0)", "grandalf (>=0.8,<0.9)", "pygraphviz (>=1.14,<2.0)", "tavily-python (>=0.7.10,<0.8.0)", "bs4 (>=0.0.2,<0.0.3)", "ddgs (>=9.4.0,<10.0.0)", "pygments (>=2.19.2,<3.0.0)", "langgraph-checkpoint-sqlite (>=2.0.10,<3.0.0)", "ipython-sql (>=0.5.0,<0.6.0)", "pandas (>=2.3.1,<3.0.0)", "aiosqlite (>=0.21.0,<0.22.0)"]

[tool.poetry]
packages = [{ include = "agent_in_langgraph", from = "src" }]


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0.1"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
